fix input overflow on homepage

--- a/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
@@ -120,6 +120,10 @@ h3.home-sub {
   padding-left: 5px;
 }
 
+.width-100 {
+  width:100%;
+}
+
 .sign-in-pad {
   padding-top: 30px;
 }
